--- a/App/index.html
+++ b/App/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="./static/css/electron-tabs.css" type="text/css" />
 <link rel="stylesheet" href="./static/css/toggle-arrow.css" type="text/css" />
 <!-- Some Code to make jquery work, jquery doesn't set the $ variable if it is in an electron context and this makes it work  -->
@@ -86,13 +87,15 @@
 		}
 
 		.add-tab:hover,
-		.titlebar-arrow:hover
+    .titlebar-arrow:hover,
+    .titlebar-controls .material-icons:hover
 		{
 			background-color: rgba(255, 255, 255, 0.1);
 		}
 
 		.titlebar-light .add-tab:hover,
-		.titlebar-light .titlebar-arrow:hover
+    .titlebar-light .titlebar-arrow:hover,
+    .titlebar-light .titlebar-controls .material-icons
 		{
 			background-color: rgba(0, 0, 0, 0.1);
 		}
@@ -119,6 +122,39 @@
     .titlebar-controls {
 			-webkit-app-region: no-drag;
     }
+    .material-icons {
+      font-family: 'Material Icons';
+      font-weight: normal;
+      font-style: normal;
+      font-size: 24px;  /* Preferred icon size */
+      display: inline-block;
+      line-height: 1;
+      text-transform: none;
+      letter-spacing: normal;
+      word-wrap: normal;
+      white-space: nowrap;
+      direction: ltr;
+
+      /* Support for all WebKit browsers. */
+      -webkit-font-smoothing: antialiased;
+      /* Support for Safari and Chrome. */
+      text-rendering: optimizeLegibility;
+
+      /* Support for Firefox. */
+      -moz-osx-font-smoothing: grayscale;
+
+      /* Support for IE. */
+      font-feature-settings: 'liga';
+    }
+
+    .titlebar-controls .material-icons {
+      float: left;
+      padding-top: 4px;
+      height: 27px;
+      width: 36px;
+      padding-left: 10px;
+    }
+
     </style>
 </head>
 
