--- a/App/index.html
+++ b/App/index.html
@@ -176,7 +176,7 @@
 			<input type='text' id='url'>
 			<input type='hidden' id='edit-id' />
 			<input type='submit' id='edit-tab-btn' value='Submit' />
-			<input type='button' onclick="$('#edit-tab').hide();document.querySelector('.etabs-views').classList.remove('blur')" value='Close' />
+			<input type='button' id='close-btn' value='Close' />
 		</form>
 	</div>
 
