--- a/LiveTrade/index.html
+++ b/LiveTrade/index.html
@@ -11,19 +11,18 @@
           -webkit-app-region: drag;
           display:inline-block;
           overflow: hidden;
-          white-space: nowrap;
-          background-color: rgb(255, 255, 255)
+          background-color: rgb(255, 255, 255);
+          font-size: 90%;
         }
 
         .mainArea {
           -webkit-app-region: drag;
           display:inline-block;
           overflow: hidden;
-          white-space: nowrap;
         }
 
-        img.icon {
-          height: auto !important;
+        td.mods {
+          max-width: 440px;
         }
 
     </style>
