Remove the dependency on ffi and replaced it with a custom cpp module

--- a/LiveTrade/index.html
+++ b/LiveTrade/index.html
@@ -3,29 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="./static/css/sockets.css" type="text/css" />
-    <style>
-        a {
-            -webkit-app-region: no-drag;
-        }
-        body {
-          -webkit-app-region: drag;
-          display:inline-block;
-          overflow: hidden;
-          background-color: rgb(255, 255, 255);
-          font-size: 90%;
-        }
+    <link rel="stylesheet" href="./static/css/item.css" type="text/css" />
 
-        .mainArea {
-          -webkit-app-region: drag;
-          display:inline-block;
-          overflow: hidden;
-        }
-
-        td.mods {
-          max-width: 440px;
-        }
-
-    </style>
 
 </head>
 
